# megascops-local

./: .editorconfig  .gitignore  .gitmodules  README.md  README_CN.md  eslint.config.js  megascops-local.code-workspace  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.eslint.json  vite.config.js
.github/: release.yml
.github/workflows/: publish.yml
patch/windows/cuda/: megascops_local-cuda_patch.nsi
patch/windows/openvino/: megascops_local-ov_patch.nsi
patch/windows/tensorrt/: megascops_local-trt_patch.nsi
scripts/: download-binaries.js  download-models.js  download-resources.js  patch-checker.js
src/: shepherd.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/models/: MDV6-rtdetr_s.toml  MDV6-rtdetr_x.toml  MDV6-yolov9e-1280_d_pp.toml  MDV6-yolov9e-1280_d_pp_fp16.toml  MDV6-yolov9e_d_pp.toml  md_v5a.toml  md_v5a_fp16.toml  md_v6b.toml  md_v6b_fp16.toml
src-tauri/models/toml/: MDV6-rtdetr_s.toml  MDV6-rtdetr_x.toml  MDV6-yolov10n.toml  MDV6-yolov10x.toml  MDV6-yolov9e-1280_d_pp.toml  MDV6-yolov9e-1280_d_pp_fp16.toml  MDV6-yolov9e_d_pp.toml  md_v5a.toml  md_v5a_fp16.toml
src-tauri/src/: detect.rs  ep.rs  export.rs  io.rs  lib.rs  main.rs  media.rs  utils.rs
src-tauri/windows/: hooks.nsi
src/i18n/: en.json  zh-CN.json
src/lib/: store.svelte.ts  tour.ts  utils.ts
src/lib/components/: ConfigPanel.svelte  ConfigSlider.svelte  DetectPanel.svelte  TooltipWrapper.svelte  index.ts
src/lib/components/ui/select/: index.ts
src/lib/i18n/: index.ts
src/routes/: +layout.ts  +page.svelte
