[package]
name = "Megascops-local"
version = "0.1.1"
description = "A cameratrap media detection tool"
authors = ["Zhengyi Dong <zhengyi.dong@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "megascops_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
ffmpeg-sidecar = "2.0.2"
image = "0.25.5"
jpeg-decoder = "0.3.1"
walkdir = "2.5.0"
anyhow = "1.0.90"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
csv = "1.3.0"
fast_image_resize = { version = "5.0.0", features = ["rayon"] }
thiserror = "1.0.64"
nom-exif = "2.2.0"
rayon = "1.10.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
toml = "0.8.19"
itertools = "0.14.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-store = "2"
ndarray = "0.16.1"
nshare = { version = "0.10.0", default-features = false, features = [
    "image",
    "ndarray",
] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
md-5 = "0.10.6"

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.8", features = [
    "openvino",
    "cuda",
    "tensorrt",
    "directml",
] }
wmi = "0.15.1"
nvml-wrapper = { version = "0.10.0", features = ["serde"] }


[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.8", features = ["openvino", "cuda", "tensorrt"] }
nvml-wrapper = { version = "0.10.0", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.8", features = ["coreml"] }
sysinfo = "0.33.1"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
